--- a/src/less/style.less
+++ b/src/less/style.less
@@ -4,41 +4,42 @@
 	text-decoration: none;
 	list-style: none;
 	word-wrap: break-word;
+	box-sizing: border-box;
 }
 
 /* Font family */
 
 @font-face {
-    font-family: 'HelveticaNeueCyr_bold';
-    src: url('HelveticaNeueCyr-Bold.eot');
-    src: url('HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
-        url('HelveticaNeueCyr-Bold.woff2') format('woff2'),
-        url('HelveticaNeueCyr-Bold.woff') format('woff'),
-        url('HelveticaNeueCyr-Bold.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
+	font-family: 'HelveticaNeueCyr_bold';
+	src: url('../fonts/HelveticaNeueCyr-Bold.eot');
+	src: url('../fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
+	url('../fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+	url('../fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'HelveticaNeueCyr_med';
-    src: url('HelveticaNeueCyr-Medium.eot');
-    src: url('HelveticaNeueCyr-Medium.eot?#iefix') format('embedded-opentype'),
-        url('HelveticaNeueCyr-Medium.woff2') format('woff2'),
-        url('HelveticaNeueCyr-Medium.woff') format('woff'),
-        url('HelveticaNeueCyr-Medium.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
+	font-family: 'HelveticaNeueCyr_med';
+	src: url('../fonts/HelveticaNeueCyr-Medium.eot');
+	src: url('../fonts/HelveticaNeueCyr-Medium.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/HelveticaNeueCyr-Medium.woff2') format('woff2'),
+	url('../fonts/HelveticaNeueCyr-Medium.woff') format('woff'),
+	url('../fonts/HelveticaNeueCyr-Medium.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'HelveticaNeueCyr_black';
-    src: url('HelveticaNeueCyr-Black.eot');
-    src: url('HelveticaNeueCyr-Black.eot?#iefix') format('embedded-opentype'),
-        url('HelveticaNeueCyr-Black.woff2') format('woff2'),
-        url('HelveticaNeueCyr-Black.woff') format('woff'),
-        url('HelveticaNeueCyr-Black.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
+	font-family: 'HelveticaNeueCyr_black';
+	src: url('../fonts/HelveticaNeueCyr-Black.eot');
+	src: url('../fonts/HelveticaNeueCyr-Black.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/HelveticaNeueCyr-Black.woff2') format('woff2'),
+	url('../fonts/HelveticaNeueCyr-Black.woff') format('woff'),
+	url('../fonts/HelveticaNeueCyr-Black.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
 }
 
 
@@ -60,6 +61,28 @@
 	font-size: 3.5rem;
 	.black();
 	font-weight: 900;
+
+	&-center {
+		text-align: center;
+		
+		&::after {
+			content: '';
+			display: block;
+			margin: 0 auto;
+			margin-top: 1.1rem;
+			width: 5.6rem;
+			height: 0.5rem;
+			border-bottom: 0.5rem solid @border-color;
+		}
+	}
+
+	&_light {
+		color:@light;
+	}
+}
+
+p {
+	font-size: 1.7rem;
 }
 
 /* Colors */
@@ -68,8 +91,16 @@
 @grey: #232320;
 @btn-color: #94ca2d;
 @price: #b61919;
+@bg-light: #f8f8f0;
+@bg-lighter: #fcfcf6;
+@border-color: #18a7d0;
 
 /* Basic settings */
+
+html,
+body {
+	overflow-x: hidden;
+}
 
 html {
 	font-size: 10px;
@@ -93,9 +124,10 @@ a {
 
 /* Button */
 .button {
-	padding: 1rem 2.5rem;	
+	padding: 1rem 3.5rem;	
+	height: 6.2rem;
 	font-size: 1.8rem;	
-	border-radius: 5px;
+	border-radius: 0.5rem;
 	color: @light;
 	background-color: @btn-color;
 	text-transform: uppercase;
@@ -107,6 +139,45 @@ a {
 	}
 }
 
+/* Form */
+
+.form {
+	padding: 4rem 6rem;
+	background-color: @dark;
+	right: 0;
+	color: @light;
+	border: 0.4rem solid @border-color;
+	text-align: center;
+	max-width: 40.2rem;
+	
+	h3 {
+		font-size: 2.2rem;
+	}
+
+	input {
+		margin-top: 0.7rem;
+		padding: 0 2.4rem;
+		height: 5rem;
+		background: none;
+		border: 0.2rem solid @light;
+		border-radius: 0.5rem;
+		font-size: 1.8rem;
+		color:@light;
+		
+		&::placeholder {
+			color: @light;
+		}
+	}
+
+	button {
+		margin-top: 1rem;
+	}
+
+	p{
+		margin-top: 1.5rem;
+		font-size: 1.5rem;
+	}
+}
 
 /* Header */
 
@@ -120,12 +191,14 @@ main {
 
 	.header {
 		padding: 1rem 0;
+		height: 8.6rem;
 		background-color: rgba(0, 0, 0, 0.62);
 
 		.logo {
 
 			&-block {
 				display: flex;
+				height: 100%;
 			}
 
 			&-img {
@@ -134,11 +207,14 @@ main {
 
 			&-text {
 				margin-left: 1.5rem;
+				align-self: center;
+				margin-bottom: 0;
+				line-height: 2.2rem;
 				font-size: 2rem;
 				color: @light;
 			}
 		}
-	
+
 
 
 		.contacts {
@@ -155,6 +231,7 @@ main {
 			.header-btn {
 				background: none;
 				border: none;
+				margin-top: -0.8rem;
 				color: @btn-color;
 				font-size: 2.3rem;
 			}
@@ -163,7 +240,7 @@ main {
 
 	.main {
 
-				
+
 
 		&-content {
 
@@ -198,14 +275,15 @@ main {
 
 .about-vrbox {
 	padding: 10rem 0 6.4rem 0;
-	background:  url(../img/about-vrbox/border-btm-bg.png) repeat-x bottom left, #f8f8f0;
+	background:  url(../img/about-vrbox/border-btm-bg.png) repeat-x bottom left, @bg-light;
 
 	&-title {
-		margin-bottom: 4.4rem;
+		margin-bottom: 4.3rem;
 	}
 
 	&-text {
 		font-size: 1.7rem;
+		padding-right: 5rem;
 	}
 
 	&-set {
@@ -224,8 +302,7 @@ main {
 	}
 
 	&-title4 {
-		font-size: 1.8rem;
-		font-weight: bold;
+		font-size: 2rem;
 		.med();
 
 		&:last-child {
@@ -241,21 +318,445 @@ main {
 	}
 
 	&-img {
-		padding: 8rem 0;
+		padding: 5rem 0;
 
 		img {
-			height: 29rem;
+			height: 30rem;
 		}
 
 		h5 {
 			font-size: 2.5rem;
 			text-align: right;
 			.med();
+			margin-right: 2rem;
+			margin-top: -2.5rem;
+
 		}
 
 		p {
 			font-size: 1.7rem;
 			text-align: right;
+			margin-right: 2rem;
 		}
+	}
+
+	&-button {
+		border-bottom: 0.4rem solid darken(@btn-color, 10%);
+		height: 7rem;
+	}
+}
+
+.functions {
+
+	&-col {
+
+		&-right {
+			padding-top: 5.8rem;
+		}
+
+	}
+
+	&-vrbox {
+		background-color: @bg-lighter;
+		padding: 9rem 0 7.8rem 0;
+
+		&_sport-game {
+			padding: 5rem 0 6rem 0;
+			background:  url(../img/about-vrbox/border-btm-bg.png) repeat-x bottom left, @bg-light;
+		}
+	}
+
+	&-title {
+		font-size: 2.1rem;
+		font-weight: 700;
+		margin-bottom: 2rem;
+	}
+
+	&-img {
+		position: relative;
+
+
+		&-diamond1 {
+			position: absolute;
+			left: 7rem;
+			bottom: 17.5rem;
+			z-index: 1;
+		}
+
+		&-diamond2 {
+			position: absolute;
+			top: 0;
+			right: 0px;
+		}
+
+		&-diamond3 {
+			position: absolute;
+			bottom: 14rem;
+			left: 3rem;
+		}
+
+		&-diamond4 {
+			position: absolute;
+			bottom: 0;
+			right: 8rem;
+		}
+
+		&-girl {
+			display: block;
+			margin-left: 22%;
+		}
+
+		&-left {
+			position: relative;
+			z-index: 2;
+			margin-bottom: 1.7rem;
+
+			&_sport {
+				margin-bottom: 15rem;
+			}
+
+			
+		}
+
+		&-right {
+			position: relative;
+			margin-top: -20rem;
+			margin-left: 10%;
+
+			&_game {
+				margin-top: 9rem;
+			}
+		}
+	}
+
+
+	&-left {
+		padding-left: 11.7rem;
+	}
+
+	&-right {
+		padding-right: 13.5rem;
+	}
+}
+
+.order {
+	background: @grey url(../img/order/order-bg.jpg) 50% 85%  no-repeat;
+	color: @light;
+
+	&-bg {
+		background-color: rgba(0, 0, 0, 0.76);
+		padding: 2.5rem 2.3rem;
+	}
+
+	&-block {
+		width: 90%;
+		padding: 6.3rem 0 0 0;
+	}
+
+	&-text {
+		display: block;
+		position: relative;
+		width: 92%;
+		font-size: 1.8rem;
+		line-height: 2rem;
+		margin: 2.5rem 0 4rem 0;
+		background-color: @border-color;
+		padding: 1rem 1.5rem;
+
+
+		&::after {
+			content: '';
+			display: block;
+			position: absolute;
+			left: 100%;
+			top: 0;
+			bottom: 0;
+			width: 1.5rem;
+			-webkit-clip-path: polygon(0 0, 0 100%, 100% 50%);
+			clip-path: polygon(0 0, 0 100%, 100% 50%);
+			background-color: @border-color;
+		}
+	}
+
+	&-adventages {
+		display: flex;
+	}
+
+	&-adventage {
+		display: flex;
+
+		&:last-child{
+			margin-left: 2.8rem;
+		}
+
+		img {
+			margin-right: 1rem;
+			align-self: flex-start;
+		}
+	}
+
+	&-form {
+
+		form {
+			margin-left: auto;
+		}
+	}
+}
+
+.how_work {
+
+	background: @bg-lighter url(../img/how_work/work-bg.png) center no-repeat;
+	background-color: @bg-lighter;
+	background-size: auto;
+	padding-top: 9.7rem;
+	padding-bottom: 10rem;
+
+	&-bg {
+
+	}
+
+	.row {
+
+		display: flex;
+		justify-content: center;
+		align-items: stretch;
+	}
+
+	&-column {
+
+		display: flex;
+		flex-direction:column;
+
+		img {
+			width: 18.8rem;
+			height: 15.1rem;
+			object-fit: contain;
+			align-self: center;
+		}
+	}
+
+	.title {
+		margin-bottom: 7rem;
+	}
+
+	.circle-border {
+		margin:  -2.5rem auto 0 auto;
+		width: 6.2rem;
+		height: 6.2rem;
+		border-radius: 50%;
+		background: @border-color;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: @light;
+		position: relative;
+		
+
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0.3rem;
+			right: 0.3rem;
+			bottom: 0.3rem;
+			left: 0.3rem;
+			border-radius: 50%;
+			background: @light;
+			z-index: 1;
+		}
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0.8rem;
+			right: 0.8rem;
+			bottom: 0.8rem;
+			left: 0.8rem;
+			border-radius: 50%;
+			background: @border-color;
+			z-index: 2;
+		}
+
+		span {
+			font-size: 3.5rem;
+			color: @light;
+			line-height: 5.1rem;
+			text-align: center;
+			position: relative;
+			z-index: 3;
+			display: block;
+			
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	}
+
+	&-text {
+		margin-top: 2rem;
+		text-align: center;
+		align-content: flex-end;
+	}
+}
+
+.compatibility {
+	position: relative;
+	background-color: @bg-lighter;
+	padding-bottom: 8rem;
+
+	.diamond {
+		position: absolute;
+		right: -10rem;
+		top: -12rem;
+		z-index: 2;
+	}
+
+	&-versions {
+		padding-top: 8.3rem;
+		padding-right: 11.5rem;
+	}
+
+	&-version {
+
+		img {
+			margin-right: 4rem;
+			height: 26.2rem;
+			width: 13rem;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+
+		p {
+			padding-top: 1.5rem;
+			text-align: center;
+			
+			font-size: 2.2rem;
+			.med();
+		}
+	}
+
+	&-glasses {
+		padding-top: 1rem;
+
+		img {
+			width: 56rem;
+		}
+
+		p {
+			padding-top: 6rem;
+			font-size: 2.2rem;
+			.med();
+		}
+	}
+}
+
+
+
+.vr-real {
+	background: @grey url(../img/vr_real/vr-bg.jpg) center no-repeat;
+	background-size: cover;
+	
+
+	.opacity {
+		padding: 9rem 0 10rem 0;
+		background-color: rgba(0, 0, 0, 0.67);
+	}
+
+	h2 {
+		color: @light;
+		text-align: center;
+	}
+
+	&-icon {
+		border: 0.6rem solid @light;
+		border-radius: 50%;
+		margin: 3rem auto 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 10rem;
+		height: 10rem;
+
+
+		img {
+			display: block;
+			max-height: 100%;
+			max-width: 100%;
+			width: 4.4rem;
+			margin-left: 1rem;
+		}
+	}
+
+	p {
+		margin-top: 1.3rem;
+		color: @light;
+		text-align: center;
+		font-size: 2.2rem;
+		.med();
+	}
+}
+
+.apps {
+	padding: 10rem 0 7.5rem 0;
+	background-color: @bg-lighter;
+	background: @bg-lighter url(../img/border-btm-bg.png) bottom left repeat-x;
+
+	&-icons {
+		padding-top: 3.5rem;
+		text-align: center;
+	}
+
+	&-icon {
+		margin-left: 2rem;
+		width: 5rem;
+
+		&:first-child {
+			margin-left: 0;
+		}
+
+		&:last-child {
+			margin-left: 1rem;
+		}
+	}
+
+
+	&-description {
+		outline: none;
+
+		&s {
+			margin-top: 7rem;
+		}
+
+		h4 {
+			margin-top: 4rem;
+			font-size: 2.2rem;
+			.med();
+		}
+
+		p {
+			padding: 0 1rem 0 0;
+			font-size: 1.7rem;
+
+		}
+		
+	}
+	
+	&-img {
+		position: relative;
+		 
+		.blaster {
+			position: absolute;
+			top: 10rem;
+			right: 6rem;
+			width: 20rem;
+		}
+	}
+
+	button {
+		display: block;
+		margin: 3.5rem auto 0 auto;		
 	}
 }
