add display:swap to font-face

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -10,6 +10,7 @@
 /* Font family */
 
 @font-face {
+	font-display: swap;
 	font-family: 'HelveticaNeueCyr_bold';
 	src: url('../fonts/HelveticaNeueCyr-Bold.eot');
 	src: url('../fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
@@ -21,6 +22,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'HelveticaNeueCyr_med';
 	src: url('../fonts/HelveticaNeueCyr-Medium.eot');
 	src: url('../fonts/HelveticaNeueCyr-Medium.eot?#iefix') format('embedded-opentype'),
@@ -32,6 +34,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'HelveticaNeueCyr_black';
 	src: url('../fonts/HelveticaNeueCyr-Black.eot');
 	src: url('../fonts/HelveticaNeueCyr-Black.eot?#iefix') format('embedded-opentype'),
