--- a/src/less/all.css
+++ b/src/less/all.css
@@ -4358,6 +4358,7 @@ readers do not read off random characters that represent icons */
   position: static;
   width: auto; }
 @font-face {
+  display: swap;
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: normal;
@@ -4368,6 +4369,7 @@ readers do not read off random characters that represent icons */
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
 @font-face {
+  display: swap;
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 400;
@@ -4379,6 +4381,7 @@ readers do not read off random characters that represent icons */
   font-family: 'Font Awesome 5 Free';
   font-weight: 400; }
 @font-face {
+  display: swap;
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 900;
