--- a/src/less/style.less
+++ b/src/less/style.less
@@ -256,6 +256,12 @@ a {
 			left: 50%;
 			top: 15%;
 			transform: translateX(-50%);
+
+			iframe {
+				width: 70rem;
+				height: 40rem;
+				border: none;
+			}
 	}
 }
 
@@ -537,11 +543,11 @@ main {
 }
 
 .order {
-	background: @grey url(../img/order/order-bg.jpg) 50% 85%  no-repeat;
+	background: @grey url(../img/order/order-bg-pc.jpg) center center  no-repeat;
 	color: @light;
 
 	&-footer {
-		background: @grey url(../img/order/order-bg2.jpg) 55% 60%  no-repeat;
+		background: @grey url(../img/order/order-bg2-pc.jpg) center center  no-repeat;
 		color: @light;
 	}
 
@@ -760,7 +766,7 @@ main {
 }
 
 .vr-real {
-	background: @grey url(../img/vr_real/vr-bg.jpg) center no-repeat;
+	background: @grey url(../img/vr_real/vr-bg-pc.jpg) center no-repeat;
 	background-size: cover;
 	
 
@@ -1275,6 +1281,11 @@ footer {
 	}
 
 	.order {
+		background: @grey url(../img/order/order-bg-mobile.jpg) center center  no-repeat;
+
+		&-footer {
+			background: @grey url(../img/order/order-bg2-mobile.jpg) center center  no-repeat;
+		}
 
 		&-bg {
 			padding-top: 0rem;
@@ -1394,6 +1405,10 @@ footer {
 				margin: 0 auto;
 			}
 		}
+	}
+
+	.vr-real {
+		background: @grey url(../img/vr_real/vr-bg-mobile.jpg) center no-repeat;
 	}
 
 	.apps {
